--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.9.1",
     "mongojs": "^2.3.0",
     "mongoose": "^4.4.12",
+    "morgan": "^1.7.0",
     "pug": "^2.0.0-alpha6"
   }
 }
