--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
+    "gulp-mongodb-data": "^1.0.2",
     "mongojs": "^2.3.0",
     "mongoose": "^4.4.12",
     "morgan": "^1.7.0",
