--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
     "gulp-mongodb-data": "^1.0.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.3",
     "mongojs": "^2.3.0",
     "mongoose": "^4.4.12",
     "morgan": "^1.7.0",
