--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "^1.5.8",
+    "materialize": "^0.97.8",
+    "angular-route": "^1.5.8",
+    "jquery": "^3.1.1"
+  }
 }
